--- a/_posts/css相关内容/2019-10-26-两栏，左边固定，右边自适应.md
+++ b/_posts/css相关内容/2019-10-26-两栏，左边固定，右边自适应.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN1 >
+    - < LTN2 >
 typora-root-url: ..
 ---
 
@@ -108,7 +108,7 @@ typora-root-url: ..
     float: left; /* 浮动 */
 }
 .right {
-    overflow: auto/hidden; /* 形成 BFC - 不会与浮动元素重叠 */
+    overflow: auto/hidden/scroll; /* 形成 BFC - 不会与浮动元素重叠 */
 }
 ```
 
