--- a/_posts/浏览器原理相关内容/2021-07-01-给DOM元素绑定事件.md
+++ b/_posts/浏览器原理相关内容/2021-07-01-给DOM元素绑定事件.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < 浏览器原理 >
-    - < LTN1 >
+    - < LTN2 >
 typora-root-url: ..
 ---
 
@@ -18,7 +18,7 @@ typora-root-url: ..
 
 1、**利用 addEventListener 绑定**【推荐】
 
-- 优点：可以给同一个元素添加1个/多个事件
+- 优点：『可以给同一个元素添加1个/多个事件』
 
 ```js
 button.addEventListener('click', handleClick);
