--- a/_posts/浏览器原理相关内容/2024-10-24-怎么实现跨域.md
+++ b/_posts/浏览器原理相关内容/2024-10-24-怎么实现跨域.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < 浏览器原理 >
-    - < LTN1 >
+    - < LTN2 >
 typora-root-url: ..
 ---
 
@@ -36,9 +36,9 @@ typora-root-url: ..
 
 - **①CORS - 跨域资源共享** 支持所有类型的HTTP请求，是跨域HTTP请求的【**根本解决方案**】
 
-- **②JSONP只支持GET请求**，JSONP的优势在于支持老式浏览器，以及可以向不支持CORS的网站请求数据
+- **②JSONP『只支持GET请求』**，JSONP的优势在于支持老式浏览器，以及可以向不支持CORS的网站请求数据
 
-- **③代理服务器**，主要是通过 **同源策略对服务器不加限制**，最简单
+- **③代理服务器**，主要是通过 **同源策略对服务器不加限制**，浏览器和代理服务器同源即可，最简单
 - ④ postMessage ⑤ websocket协议，有一些缺点，但也可用；还有一些通过 iframe 传递的方法，可实现，但不实用，不做记录
 
 
