HTTP相关：统一复习，内容比较熟悉

--- a/_posts/HTTP相关/2019-07-03-《图解HTTP协议-修改》.md
+++ b/_posts/HTTP相关/2019-07-03-《图解HTTP协议-修改》.md
@@ -52,7 +52,7 @@ typora-root-url: ..
 TCP/IP通信传输流：客户端到服务器通过分层顺序传输
 路由选择：在到达通信目标前的中转过程，计算机和路由器等网络设备，都只能获悉很粗略的传输路线，无法掌握互联网中全面传输情况
 
-![1571468854066](/img/assets_2019/1571468854066.png)
+![1571468854066](../img/assets_2019/1571468854066.png)
 
 
 发送端：从应用层**往下走**；每通过一层会**增加该层**的首部信息（这种把数据信息包装起来的做法称为封装）；
@@ -63,7 +63,7 @@ TCP/IP通信传输流：客户端到服务器通过分层顺序传输
 
 客户端发送到服务器的过程：
 
-![1571468842842](/img/assets_2019/1571468842842.png)
+![1571468842842](../img/assets_2019/1571468842842.png)
 
 
 
@@ -85,23 +85,23 @@ GET /index.htm HTTP/1.1
 Host：hackr.jp
 请求方法：请求访问服务器的类型；请求URI：指明请求访问的资源对象；
 
-![1571468761996](/img/assets_2019/1571468761996.png)
+![1571468761996](../img/assets_2019/1571468761996.png)
 
 **响应报文**：由**协议版本、状态码、解释状态码的原因短语**（三者组成**状态行**）、可选的响应首部字段及实体主体构成。	两种报文中，报文首部和报文主体由最初的空行来划分。
 
-![1571468744879](/img/assets_2019/1571468744879.png)
+![1571468744879](../img/assets_2019/1571468744879.png)
 
 - 请求方法：GET访问**已被URI识别的资源**。指定的资源经服务器端解析后返回响应内容。
 
-  ![1571468713950](/img/assets_2019/1571468713950.png)
+  ![1571468713950](../img/assets_2019/1571468713950.png)
 
   ​				POST用来**传输实体的主体**。返回服务器接收数据的处理结果。
 
-  ![1571468684320](/img/assets_2019/1571468684320.png)
+  ![1571468684320](../img/assets_2019/1571468684320.png)
 
   ​					HEAD获得**报文首部**。用于确认URI的有效性及资源更新的日期时间。
 
-  ​					OPTIONS**查询针对请求URI指定的资源支持的方法**。
+  ​					OPTIONS**查询针对请求URI指定的资源支持的方法** - 复杂请求的是否支持跨域使用 options 作为预检请求进行查询。
 
   ​					CONNECT用隧道协议连接代理。用SSL和TLS把通信内容加密后经网络隧道传输。
 
@@ -122,29 +122,19 @@ Host：hackr.jp
 
 
 
-- ### 常见请求头
+- ### 常见请求头属性
 
 ```http
 Accept: text/html,image/*      // 浏览器接受的数据类型
-
 Accept-Charset: ISO-8859-1     // 浏览器接受的编码格式
-
 Accept-Encoding: gzip,compress  //浏览器接受的数据压缩格式
-
 Accept-Language: en-us,zh-       //浏览器接受的语言
-
 Host: www.it315.org:80          //（必须的）当前请求访问的目标地址（主机:端口）
-
 If-Modified-Since: Tue, 11 Jul 2000 18:23:51 GMT  --浏览器最后的缓存时间
-
 Referer: http://www.it315.org/index.jsp      -- 当前请求来自于哪里
-
 User-Agent: Mozilla/4.0 (compatible; MSIE 5.5; Windows NT 5.0)  --浏览器类型
-
 Cookie:name=eric                     -- 浏览器保存的cookie信息
-
-Connection: close/Keep-Alive            -- 浏览器跟服务器连接状态。close: 连接关闭  keep-alive：保存连接。
-
+Connection: close/Keep-Alive  -- 浏览器跟服务器连接状态。close: 连接关闭  keep-alive：保存连接。
 Date: Tue, 11 Jul 2000 18:23:51 GMT      -- 请求发出的时间
 ```
 
@@ -172,12 +162,11 @@ Date: Tue, 11 Jul 2000 18:23:51 GMT      -- 请求发出的时间
 
 - 状态码：表示请求成功或失败的数字代码
 
-![](/img/assets_2019/baowen.jpg)
+![](../img/assets_2019/baowen.jpg)
 
 ### Cookie技术
 
-- HTTP协议自身不具备保
-- 存之前发送过的请求或响应的功能，即**无状态协议**。
+- HTTP协议自身不具备保存之前发送过的请求或响应的功能，即**无状态协议**。
 
 为了实现期望的保持状态功能，于是引入了Cookie技术。
 
@@ -213,7 +202,7 @@ Set-Cookie的几个属性：
 
 ### 状态码
 
-![](/img/assets_2019/zhuangtaima.jpg)
+![](../img/assets_2019/zhuangtaima.jpg)
 
 - 200 OK 的响应结果表明请求被**正常处理**了。
 - 204 No Content 服务器接收的请求已成功处理，但在返回的响应报文中**不含实体的主体部分**。
