--- a/_posts/HTTP相关/2021-04-25-12 HTTP传输大文件.md
+++ b/_posts/HTTP相关/2021-04-25-12 HTTP传输大文件.md
@@ -46,7 +46,11 @@ typora-root-url: ..
 
     4、最后用一个长度为 0 的块表示结束，即 `0\r\n\r\n`
 
-    <img src="/../img/assets_2019/image-20210425203723581.png" alt="image-20210425203723581" style="zoom:33%;" /><img src="/../img/assets_2019/image-20210425203804447.png" alt="image-20210425203804447" style="zoom:15%;" />
+    
+    
+    <img src="/../img/assets_2019/image-20210425203723581.png" alt="image-20210425203723581" style="zoom:33%;" />
+    
+    <img src="/../img/assets_2019/image-20210425203804447.png" alt="image-20210425203804447" style="zoom:15%;" />
 
 ### 范围请求
 
