--- a/_posts/HTTP相关/2021-04-28-19 HTTPS 中的 S.md
+++ b/_posts/HTTP相关/2021-04-28-19 HTTPS 中的 S.md
@@ -46,7 +46,7 @@ typora-root-url: ..
 也叫不可抵赖，意思是不能否认已经发生过的行为，不能说话不算数、耍赖皮
 
 ## HTTPS vs HTTP
-HTTPS：新的协议名 `https`，默认端口号 443
+HTTPS：新的协议名 `https`，默认端口号 443（HTTP：80）
 -   至于其他的什么请求 - 应答模式、报文结构、请求方法、URI、头字段、连接管理等等都完全沿用 HTTP，没有任何新的东西
 
 ## HTTPS 名字里的“S”
