--- a/_posts/HTTP相关/2021-04-29-25 HTTP2 特性.md
+++ b/_posts/HTTP相关/2021-04-29-25 HTTP2 特性.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < HTTP相关 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -16,21 +17,23 @@ typora-root-url: ..
 
 - 总结
 
-    1、HTTP 协议 <u>取消了小版本号</u>，所以 `HTTP/2` 的正式名字不是 2.0
+    HTTP 协议 <u>取消了小版本号</u>，所以 `HTTP/2` 的正式名字不是 2.0
 
-    2、HTTP/2 在 **语义** 上兼容 HTTP/1.1，保留了请求方法、URI 等传统概念
+    在 **语义** 上兼容 HTTP/1.1，大力改造语法层 -> 改进性能、针对队头阻塞：
 
-    3、HTTP/2 使用 `HPACK` 算法（字典表） **<span style="color:red">压缩头部信息</span>**，消除冗余数据节约带宽
+    1、使用 `HPACK` 字典表算法 **<span style="color:red">压缩头部信息</span>**
 
-    4、HTTP/2 的消息不再是 `Header+Body` 的形式，而是分散为多个 **<span style="color:red">二进制帧</span>**
+    2、不再使用纯文本报文，全面采用 **<span style="color:red">二进制帧</span>**
 
-    5、HTTP/2 使用 **虚拟的流** 传输消息，解决了困扰多年的 **队头阻塞** 问题（在应用层解决，但是传输层 TCP 协议中仍旧存在队头阻塞），同时实现了 **<span style="color:red">多路复用</span>**，提高连接的利用率
+    3、使用 **虚拟的流（二进制帧的双向传输序列）** 传输消息，同时实现了 **<span style="color:red">多路复用</span>** - 多个往返通信都复**用一个连接来处理**，（多个请求/响应之间没有了顺序关系）解决了困扰多年的 **队头阻塞** 问题
 
-    6、HTTP/2 也增强了安全性，要求至少是 TLS1.2，而且禁用了很多不安全的密码套件
+    - 在应用层解决，但是传输层 TCP 协议中仍旧存在队头阻塞
 
-    7、设置请求的优先级
+    4、**<span style="color:red">服务器推送</span>**
 
-    8、**<span style="color:red">服务器推送</span>**
+    5、设置请求的优先级
+    
+    6、也增强了安全性，使用 HTTPS
 
 ## 版本号名字
  HTTP/2 工作组明确只使用大版本号，每当发布新版本的 HTTP 协议都会有本质的不同，绝不会有零敲碎打的小改良
