--- a/_posts/HTTP相关/2021-05-06-27 HTTP3.md
+++ b/_posts/HTTP相关/2021-05-06-27 HTTP3.md
@@ -17,7 +17,7 @@ typora-root-url: ..
 
 - 总结
 
-    1、HTTP/3 基于 QUIC 协议，**完全解决了队头阻塞** 问题，弱网环境下的表现会优于 HTTP/2
+    1、HTTP/3 基于 QUIC 协议，**完全解决了队头阻塞** 问题（不使用 TCP，改为 UDP），弱网环境下的表现会优于 HTTP/2
 
     2、QUIC 是一个新的 **传输层协议**，建立在 **UDP** 之上，实现了可靠传输
 
@@ -30,7 +30,7 @@ typora-root-url: ..
     6、HTTP/3 **没有指定默认端口号**，需要用 HTTP/2 的 **扩展帧Alt-Svc** 来发现
 
 ## 为什么说HTTP2 没有完全解决队头堵塞呢？
-HTTP/2 虽然使用帧、流、多路复用，（在应用层）没有了队头阻塞【，但这些手段都是在 **应用层** 里，而在下层**传输层的 TCP 协议** 里，还是会发生队头阻塞
+HTTP/2 虽然使用帧、流、多路复用，（在应用层）没有了队头阻塞，但这些手段都是在 **应用层** 里，而在下层**传输层的 TCP 协议** 里，还是会发生队头阻塞
 
 - 队头阻塞的解决方案
 
