--- a/_posts/HTTP相关/2021-05-06-29 WebSocket.md
+++ b/_posts/HTTP相关/2021-05-06-29 WebSocket.md
@@ -8,23 +8,29 @@ header-img:
 catalog: true
 tags:
     - < HTTP相关 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 
 # 29 WebSocket
 
-- 总结
+总结：
 
-    1、HTTP 的 请求 - 应答 模式不适合开发 **实时通信** 应用，效率低，难以实现动态页面，所以出现了 `WebSocket`
+HTTP 的 **请求 - 应答** 模式不适合开发 **实时通信** 应用，效率低，难以实现动态页面，所以出现了 `WebSocket`
 
-    2、`WebSocket` 是一个 **全双工** 的通信协议，相当于对 TCP 做了一层薄薄的包装，让它运行在浏览器环境里
+- 1、定义：`WebSocket` 是一个 **全双工 - 双向通信** 的通信协议，实现浏览器和服务端 **实时通信** - 没有同源限制
 
-    3、`WebSocket` 使用兼容 HTTP 的 **URI 格式** 来发现服务，但定义了新的协议名 `ws` 和 `wss`，端口号也沿用了 80 和 443
+- 2、`WebSocket` 采用了 **二进制帧结构**，和 HTTP对比：
+    - ①语法、语义与 HTTP 完全不兼容
+    - ②发现服务没有使用 HTTP 的 IP:端口号，而是使用 **URI 格式** (HTTP也兼容)
+    - ③新的协议名： `ws:80`和 `wss:443`
 
-    4、`WebSocket` 使用 **二进制帧**（也可以发送文本），结构比较简单，数据格式比较轻量，性能开销小，通信高效，特殊的地方是有个 **掩码** 操作，客户端发数据必须掩码，服务器则不用
+- 3、连接实现：`WebSocket` 利用 HTTP 协议实现连接握手 - **发送 GET 请求要求协议升级**，目的是防止误连接 - **握手阶段** 采用 HTTP 协议，因此握手时不容易屏蔽，能通过各种 HTTP 代理服务器
 
-    5、`WebSocket` 利用 HTTP 协议实现连接握手，**发送 GET 请求要求协议升级**，握手过程中有个非常简单的认证机制，目的是防止误连接 - **握手阶段** 采用 HTTP 协议，因此握手时不容易屏蔽，能通过各种 HTTP 代理服务器
+
+
+浏览器用 `wss://xxx` 创建 `WebSocket` 连接时，会先通过 HTTPS 创建安全的连接，然后，该 HTTPS 连接升级为 `WebSocket` 连接，底层通信走的仍然是安全的 SSL/TLS 协议
 
 
 
@@ -56,7 +62,9 @@ typora-root-url: ..
 
 ## 握手
 
-<img src="/../img/assets_2019/websocket.png" alt="img" style="zoom:60%;" /><img src="/../img/assets_2019/websocket2.png" alt="img" style="zoom:60%;" />
+<img src="/../img/assets_2019/websocket.png" alt="img" style="zoom:60%;" />
+
+<img src="/../img/assets_2019/websocket2.png" alt="img" style="zoom:60%;" />
 
 握手是一个标准的 HTTP `GET` 请求，但要带上两个 **协议升级** 的专用头字段：
 -   `Connection: Upgrade`：表示要求 **协议升级**
@@ -82,4 +90,4 @@ Sec-WebSocket-Protocol: binary
 
 握手成功后，通信不再使用 HTTP 协议，而采用 `WebSocket` 独立的数据帧
 
-- 浏览器用 `wss://xxx` 创建 `WebSocket` 连接时，会先通过 HTTPS 创建安全的连接，然后，该 HTTPS 连接升级为 `WebSocket` 连接，底层通信走的仍然是安全的 SSL/TLS 协议
+`WebSocket` ，结构比较简单，数据格式比较轻量，性能开销小，通信高效，特殊的地方是有个 **掩码** 操作，客户端发数据必须掩码，服务器则不用
