--- a/_posts/css相关内容/2021-06-26-BFC特点、触发、存在解决的问题.md
+++ b/_posts/css相关内容/2021-06-26-BFC特点、触发、存在解决的问题.md
@@ -53,9 +53,7 @@ typora-root-url: ..
 
 如上图所示，解决方案
 
-- 1️⃣可以将两个盒子放在不同的 BFC 容器中
-
-- 2️⃣『父盒子给 flex』：让两个盒子都变成弹性盒子，效果如图
+- 『给父盒子 flex』：让两个盒子都变成弹性盒子，效果如图
 
 <img src="/../img/assets_2019/image-20210619160047566.png" alt="image-20210619160047566" style="zoom:33%;" />
 
@@ -70,7 +68,7 @@ typora-root-url: ..
             margin-bottom: 50px;
         }
         .content2 {
-            background-color: blue;
+            margin-top: 100px;
         }
         /* 解决方案父盒子 flex */
         .wrap {
