--- a/_posts/HTTP相关/2021-04-21-06 协议视角：如何发起一次请求.md
+++ b/_posts/HTTP相关/2021-04-21-06 协议视角：如何发起一次请求.md
@@ -14,13 +14,9 @@ typora-root-url: ..
 
 # 06 协议视角：如何发起一次请求
 
-配合<浏览器原理>中的如下两篇博客食用
-
-[浏览器原理 - 03 HTTP请求流程](https://codingwithalice.github.io/2021/04/08/03-HTTP%E8%AF%B7%E6%B1%82%E6%B5%81%E7%A8%8B/)
+配合<浏览器原理>中的如下博客食用
 
 [浏览器原理 - 04 导航流程：从输入url到打开页面发生了什么](https://codingwithalice.github.io/2021/04/08/04-%E5%AF%BC%E8%88%AA%E6%B5%81%E7%A8%8B-%E4%BB%8E%E8%BE%93%E5%85%A5url%E5%88%B0%E6%89%93%E5%BC%80%E9%A1%B5%E9%9D%A2%E5%8F%91%E7%94%9F%E4%BA%86%E4%BB%80%E4%B9%88/)
-
-
 
 - 总结
 
@@ -46,7 +42,7 @@ typora-root-url: ..
 
 -   从图中可以看出，**浏览器** 使用的端口是 `52085`，**服务端** 使用的端口是 `80`，经过 `SYN`、`SYN/ACK`、`ACK` 的三个包之后，浏览器和服务器的 `TCP` 连接就建立了
 
-2、有了 `TCP` 连接通道，浏览器就会按照 `HTTP` 协议，通过 `TCP` 发送一个 `GET/HTTP/1.1` 的报文
+2、有了 `TCP` 连接通道，浏览器就会按照 `HTTP` 协议，通过 `TCP` 发送一个 `GET / HTTP/1.1` 的报文
 
 3、`Web` 服务器收到报文后，会先回复一个 `ACK` 包，在 `TCP` 层面确认已收到报文
 
