--- a/_posts/HTTP相关/2021-09-02 get和POST区别.md
+++ b/_posts/HTTP相关/2021-09-02 get和POST区别.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < HTTP相关 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -18,13 +19,11 @@ typora-root-url: ..
 
 【注意】get 和post 安全等级是同级别的，不要说安全区别，都不安全，get有数据缓存的问题，清缓存query需要加时间戳，post就不会有这个问题。（站友分享思路）
 
-| GET                                    | POST                                   |
-| -------------------------------------- | -------------------------------------- |
-| 向服务器获取指定资源                   | 向服务器提交数据，**数据放在请求体里** |
-| **把参数包含在`URL`中**                | 通过`request body`传递参数             |
-| 有长度限制，2kB                        | 没有限制                               |
-| 只能进行`URL`编码                      | 支持多种编码方式                       |
-| 在浏览器 **回退时是无害的**            | 在浏览器回退时，POST会再次提交请求     |
-| GET请求会被浏览器 **主动cache**        | POST不会缓存，除非手动设置             |
-| 请求参数会被完整保留在浏览器历史记录里 | 参数不会被保留                         |
+| 差异       | GET:向服务器获取指定资源                                     | POST:向服务器提交数据                                |
+| ---------- | ------------------------------------------------------------ | ---------------------------------------------------- |
+| 数据       | 把参数包含**在`URL`中**（请求行）                            | 数据放**在请求体里**                                 |
+| 长度       | 有长度限制，2kB                                              | 没有限制                                             |
+| 回退安全性 | 在浏览器 **回退时是无害的**<br>请求参数会被完整保留在浏览器历史记录里 | 在浏览器回退时，POST会再次提交请求<br>参数不会被保留 |
+| 缓存       | GET请求会被浏览器 **主动cache**                              | POST不会缓存，除非手动设置                           |
+|            | 只能进行`URL`编码                                            | 支持多种编码方式                                     |
 
