LTN：11.9 7个LTN1 -> 升级级为 LTN2

--- a/_posts/HTTP相关/2021-05-07-XSS跨域脚本攻击 和 CSRF跨站请求伪造攻击.md
+++ b/_posts/HTTP相关/2021-05-07-XSS跨域脚本攻击 和 CSRF跨站请求伪造攻击.md
@@ -15,20 +15,20 @@ typora-root-url: ..
 
 # XSS跨域脚本攻击 和 CSRF跨站请求伪造攻击
 
-![image-20241105202318678](/../img/assets_2023/image-20241105202318678.png)
+<img src="/../img/assets_2023/image-20241110161354789.png" alt="image-20241110161354789" style="zoom:27%;" />
 
 - 总结
 
   1、**页面安全问题** 的主要原因：浏览器为 **同源策略** 开的两个后门
 
   - ①页面可引用 <u>第三方资源</u>
-  - ②通过 CORS 策略实现 <u>跨域</u> 请求资源
+  - ②『通过 CORS 策略』实现 <u>跨域</u> 请求资源
 
   2、为了解决这些问题：
 
-  - 引入了 **CSP内容安全策略** 来限制页面任意引入外部资源
-  - 引入了 `HttpOnly` 机制来禁止 `XMLHttpRequest` 或者 `Fetch` 发送一些关键 `Cookie`
-  - 引入了 `SameSite` 和 `Origin` 来防止 CSRF 攻击
+  - 引入了『 **CSP内容安全策略** 』来限制页面任意引入外部资源
+  - 引入了『 `HttpOnly` 机制』来禁止 `XMLHttpRequest` 或者 `Fetch` 发送一些关键 `Cookie`
+  - 引入了『 `SameSite` 』和 `Origin` 来防止 CSRF 攻击
 
 
 
