--- a/_posts/浏览器原理相关内容/2021-04-09-05-3 白屏优化 - 首次加载.md
+++ b/_posts/浏览器原理相关内容/2021-04-09-05-3 白屏优化 - 首次加载.md
@@ -50,10 +50,10 @@ typora-root-url: ..
     - 对于大的 `CSS` 文件，可以通过**媒体查询属性**，将其拆分为多个不同用途的 CSS 文件，这样只有在特定的场景下才会加载特定的 CSS 文件
 - 3、js：
     -  **合理的放置JS代码，尽量不要使用内联的 JS 代码**
-        -  没有 `defer` 和 `async` 标签的 `script` 会立即加载并执行 - **js 执行阻断 html 解析**
+        -  『没有 `defer` 和 `async` 标签的 `script` 会立即加载并执行 - **js 执行阻断 html 解析**』
             -  有 `async` 标签的 js - js 的加载和 html 的解析和渲染并行，加载完即执行，在页面的`onload`事件前执行
             -  有 `defer` 标签的 js - js的加载和 html 的解析和渲染并行，但会在 html 解析完成后执行，在触
                 发 `DOMContentLoaded` 事件前执行
 - 4、**减少文件大小**：比如通过 webpack 等工具移除一些不必要的注释，并压缩 JavaScript 文件
-- 5、『减少 HTTP 请求次数和请求大小』
+- 5、减少 HTTP 请求次数和请求大小
 
