--- a/_posts/面试题整理/2019-07-10-h5新标签和语义化，块行内元素.md
+++ b/_posts/面试题整理/2019-07-10-h5新标签和语义化，块行内元素.md
@@ -37,7 +37,7 @@ typora-root-url: ..
 
 - **`nav`**，**导航**栏
 
-- 『**`article`**』，独立内容区域，与session类似，用于文章blog、帖子、短文或者回复、评论等
+- **`article`**，独立内容区域，与session类似，用于文章blog、帖子、短文或者回复、评论等
 
 - **section**，代表某一个区域/分区/页面/文档的**一部分区域**，有独立的内容，但结构相近，就可以用section，范围比div大，语义比div更强，可以包含header、`h1-h6`……凸显语义的标签
 
@@ -70,15 +70,15 @@ typora-root-url: ..
 ```
 
 - `address`，**标签定义文档或文章的作者/拥有者的联系信息**，字体样式默认倾斜
-- 『<u>`time`</u>』，时间标签，主要用于搜索引擎和其它一些内容引擎特殊的解析和展示
-- 『<u>`hgroup`</u>』，专门用来包含标题**h标签的分组**；
-- <u>`detail`</u>，*细节、详情* ，open属性：默认展开，summary相当于详情的标题
+- `time`，时间标签，主要用于搜索引擎和其它一些内容引擎特殊的解析和展示
+- `hgroup`，专门用来包含标题**h标签的分组**；
+- `detail`，*细节、详情* ，open属性：默认展开，summary相当于详情的标题
 
 ④ `input`标签的增强
 
-- 新增了许多input **type属性**：`email`、`tel`、『`url`』、`number`、『<u>`search`搜索框，加强语义、`range`自由拖动滑块</u>』、`time`、`date`日期、`datetime`时间、`month`、`week`
+- 新增了许多input **type属性**：`email`、`tel`、『`url`』、`number`、search`搜索框，加强语义、`range`自由拖动滑块、`time`、`date`日期、`datetime`时间、`month`、`week`
 
--	新增了许多input的 **属性**：`placeholder`占位符，默认文字、`autofocus`页面加载时自动获得焦点、`multiple`多文件上传、`required`必填项、『<u>`accesskey`规定激活元素的快捷键、`autocomplete`</u>』
+-	新增了许多input的 **属性**：`placeholder`占位符，默认文字、`autofocus`页面加载时自动获得焦点、`multiple`多文件上传、『<u>`required`必填项</u>』、`accesskey`规定激活元素的快捷键、`autocomplete`
 
 ⑤**多媒体标签**：`embed`定义嵌入的内容、`audio`播放音频、`video`播放视频、`src`导入，`autoplay`自动播放、`controls`是否默认显示播放件、`loop`循环播放
 
