LTN：11.9 5个LTN2 -> 升级级为 LTN3，4个 LTN2  -> 降级为LTN1

--- a/_posts/JS原生基础相关/2019-07-11-隐式转换:{}+{}=?.md
+++ b/_posts/JS原生基础相关/2019-07-11-隐式转换:{}+{}=?.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < JS原生基础相关 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -29,5 +29,5 @@ typora-root-url: ..
 ({} + {}) // "[object Object][object Object]"
 ```
 
-
+- 注意：“[object Object]” 第二个是类型，第一个字母是大写 Object/Array
 
