--- a/_posts/JS原生基础相关/2021-07-21-柯里化函数实现(两种：递归调用单次调用).md
+++ b/_posts/JS原生基础相关/2021-07-21-柯里化函数实现(两种：递归调用单次调用).md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      柯里化函数实现
+title:      柯里化函数实现(两种：递归调用/单次调用)
 subtitle:  
 date:       2021-07-21
 author:     
@@ -8,11 +8,11 @@ header-img:
 catalog: true
 tags:
     - < JS原生基础相关 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
-## 柯里化函数实现
+## 柯里化函数实现(两种：递归调用/单次调用)
 
 柯里化是把 **接受 <u>多个参数</u> 的函数** 变换成 **接受一个 <u>单一参数</u> 的函数**，并且返回 **接受余下的参数而且返回结果的新函数** 的技术。
 
