webpack：常见问题整理 + 包管理工具 + 模块化 相关 LTN1 盒子整理

--- a/_posts/工程化/2020-05-22-webpack自学经验记录.md
+++ b/_posts/工程化/2020-05-22-webpack自学经验记录.md
@@ -32,7 +32,7 @@ typora-root-url: ..
     - `webpack` 能够 **处理 js 文件的相互依赖关系**
     - `webpack` 能够处理 **js 的兼容问题**，把高级的、浏览器不识别的语法转为低级的、浏览器能正常识别的语法
 
-推荐的优秀博客 ：[webpack系列之四loader详解1](https://juejin.cn/post/6844903780769595405)（我还没看过webpack源码，博客很好，我太菜了，觉得好难）
+推荐的优秀博客 ：[webpack系列之四loader详解1](https://juejin.cn/post/6844903780769595405)
 
 场景：面试的时候被反复问；做项目的时候对本地、线上理解不够；
 
@@ -106,18 +106,14 @@ typora-root-url: ..
 
 ```js
 class MyExampleWebpackPlugin {
-    // 定义 `apply` 方法
     apply(compiler) {
         // 指定要追加的事件钩子函数
         compiler.hooks.compile.tapAsync(
             'afterCompile',
             (compilation, callback) => {
                 console.log('This is an example plugin!');
-                console.log('Here’s the `compilation` object which represents a single build of assets:', compilation);
-
                 // 使用 webpack 提供的 plugin API 操作构建结果
                 compilation.addModule(/* ... */);
-
                 callback();
             }
         );
