--- a/_posts/工程化/2022-08-24-包管理工具.md
+++ b/_posts/工程化/2022-08-24-包管理工具.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < 工程化 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -18,6 +19,8 @@ typora-root-url: ..
 参考文章：[JavaScript package managers compared: npm, Yarn, or pnpm?](https://blog.logrocket.com/javascript-package-managers-compared/)
 
 看到另一篇主要讲 pnpm 实现的博客，也可以了解下 [2022年了，你还没用pnpm吗？](https://juejin.cn/post/7124142007659790372#heading-11)
+
+![image-20241114174628298](/../img/assets_2023/image-20241114174628298.png)
 
 #### 背景：在工作遇到 
 
