--- a/_posts/工程化/2020-03-17-面试 AMD和CMD区别.md
+++ b/_posts/工程化/2020-03-17-面试 AMD和CMD区别.md
@@ -7,26 +7,28 @@ author:
 header-img: 
 catalog: true
 tags:
-    - < 工程化 >
+    - < webpack >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
-
 # 模块化
-
-参考文章：[模块化](https://segmentfault.com/a/1190000017466120) - 有很多代码案例
 
 本文主要关注点：`AMD/CMD` 差异；`CommonJS/ES6模块化` 差异；4种模块化规范的进步，解决的问题
 
+模块化的优点：避免命名冲突；更好的分离，按需加载；更高复用性；高可维护性；
+
 总结：
 
-1、`CommonJS` 规范主要用于 **服务端编程**，**加载模块是<span style="color:red">同步</span>的**，不适合在浏览器环境，存在 <u>阻塞加载</u>，浏览器资源是异步加载的，因此有了AMD、CMD解决方案。
+1、`CommonJS` 规范主要用于② **服务端编程**；①**加载模块是<span style="color:red">同步</span>的**，不适合在浏览器环境，存在 <u>阻塞加载</u>；③输出一个值的拷贝；④运行时加载；
 
-2、`AMD/RequireJS` 规范在浏览器环境中 **<span style="color:red">异步</span>加载模块**，而且可以 **<span style="color:red">并行</span>加载多个模块**。
+浏览器资源是异步加载的，因此有了AMD、CMD解决方案。
 
-3、`CMD/SeaJS` 规范与AMD规范很相似，都用于浏览器编程，**<span style="color:red">依赖就近</span>**，代码更简单。
+2、`AMD/RequireJS` 规范在浏览器环境中 ① **<span style="color:red">异步</span>加载模块；**而且可以②**<span style="color:red">并行</span>**加载多个模块；③依赖前置，④加载模块后直接执行，无法保证执行顺序
 
-4、`ES6` 在语言标准的层面上，实现了模块功能，而且实现得相当简单，完全可以取代 CommonJS 和 AMD 规范，成为浏览器和服务器 **通用的模块解决方案** - 异步，输出的是值的引用，编译时输出（静态解析时生成）
+3、`CMD/SeaJS` 规范与AMD规范很相似，都用于浏览器编程，①异步；②**<span style="color:red">依赖就近</span>**，③加载后直到调用才按需执行
+
+4、`ES6` 在语言标准的层面上，实现了模块功能，而且实现得相当简单，完全可以取代 CommonJS 和 AMD 规范，成为浏览器和服务器 **通用的模块解决方案** - ①异步，②输出的是值的引用，③编译时输出（静态解析时生成）
 
 ****
 
@@ -45,9 +47,24 @@ typora-root-url: ..
 
 **最大的区别**：对依赖模块的 **执行时机处理不同**，注意不是加载的时机或者加载方式不同（都是异步加载）
 
+```js
+// AMD - 依赖必须一开始就写好
+define(['./a', './b'], function(a, b) {
+    a.doSth();
+    b.doSth();
+})
+// CMD - 依赖可以就近书写
+define(function(require, exports, module) {
+    let a = require('./a');
+    a.doSth();
+    // ...
+    let b = require('./b');
+    b.doSth();
+})
+```
+
 |          | AMD异步模块定义                                              | CMD通用模块定义                                              |
 | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-|          | <img src="/../img/assets_2019/image-20210713154151947.png" alt="image-20210713154151947" style="zoom:38%;" /> | <img src="/../img/assets_2019/image-20210713154214876.png" alt="image-20210713154214876" style="zoom:38%;" /> |
 | 工具库   | RequireJS                                                    | SeaJS                                                        |
 | 依赖     | **依赖前置**，js直接找到依赖模块，立即加载                   | **就近依赖**，需要使用把模块变为字符串解析一遍才知道依赖了那些模块，以性能换便利 |
 | 执行时机 | **加载模块完成后直接执行**，所有模块都加载执行完后会进入 `require` 的回调函数，执行主逻辑，依赖模块的 **执行顺序和书写顺序<span style="color:red">不一定一致</span>** | **加载完某个依赖模块后并不执行**，在所有依赖模块加载完成后进入主逻辑，遇到 `require` 语句的时候才执行对应的模块，模块的 **执行顺序和书写顺序是<span style="color:red">完全一致</span>**的 |
