--- a/_posts/工程化/2021-07-20-babel深入.md
+++ b/_posts/工程化/2021-07-20-babel深入.md
@@ -20,17 +20,17 @@ typora-root-url: ..
 
 - babel 总共分为三个阶段
 
-    - **解析**
+    - **解析 @babel/parser**
 
         通过 `babyIon`（7.x改名为@babel/parser）实现：先 **词法分析** 把字符串形式的代码解析为 **令牌tokens 流** （类似 AST 中节点），再 **语法分析** 把令牌流转换成 AST
 
-    - **转换**
+    - **转换 @babel-traverse**
 
-        接收到 AST 并通过 `babel-traverse` （维护了 AST 的状态，定义了节点的增删改方法）进行深度优先遍历
+        接收到 AST 并通过 `@babel-traverse` （维护了 AST 的状态，定义了节点的增删改方法）进行深度优先遍历
 
-    - **生成**
+    - **生成 @babel-generator**
 
-        将 AST 通过 `babel-generator` 进行深度优先遍历，构建字符串，转换成 js 代码
+        将 AST 通过 `@babel-generator` 进行深度优先遍历，构建字符串，转换成 js 代码
         
         <img src="/../img/assets_2019/bVbDNYp.png" alt="1.jpg" style="zoom:60%;" />
 
