刷题：优化 柯里化 + 深拷贝 写法

--- a/_posts/JS原生基础相关/2019-07-11-深拷贝和浅拷贝的区别？怎么实现深拷贝？.md
+++ b/_posts/JS原生基础相关/2019-07-11-深拷贝和浅拷贝的区别？怎么实现深拷贝？.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < JS原生基础相关 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -60,7 +60,96 @@ arr2[2].username = 'Alice';
 console.log(arr); // [1, 3, {username: 'aQiu'}] 不变
 ```
 
-2. **递归**：递归方法实现深度克隆原理：遍历对象、数组直到里边都是基本数据类型，然后再去复制，就是深度拷贝。
+2. 【完整版本】**递归**：除了数组、对象，还要考虑 Date、正则RegExp、函数，以及对象的循环引用（简单的递归会导致栈溢出）问题处理
+
+- 注意：① weakMap ② symbol不能使用 new，创建新的用`Symbol.for(target.description)`
+
+```js
+// 更周全的深拷贝
+function isObject(target) {
+    let type = typeof target;
+    return target !== null && (type === "object" || type === "function")
+}
+// Date、正则、Symbol 类型的特殊处理
+function cloneSpecial(type, target) {
+    switch (type) {
+        case '[object Date]':
+            return new Date(target.getTime())
+            break;
+        case '[object RegExp]':
+            return new RegExp(target.source, target.flags);
+            break;
+        case '[object Symbol]':
+            // 对于Symbol类型，直接返回一个新的具有相同描述的Symbol
+            return Symbol.for(target.description);
+            break;
+        default:
+            let constructor = target.constructor;
+            return new constructor(target);
+    }
+}
+function deepCopy(target, map = new WeakMap()) {
+    // 原始类型 - 递归结束条件
+    if (!isObject(target)) {
+        return target
+    }
+    // 具体引用类型
+    let type = Object.prototype.toString.call(target);
+    let copy;
+
+    // deepCloneTypes  都是需要每一项一一处理的
+    let deepCloneTypes = ['[object Map]', '[object Set]', '[object Array]', '[object Object]'];
+    // Date、正则、Symbol 类型的特殊处理
+    if (!deepCloneTypes.includes(type)) {
+        return cloneSpecial(type, target);
+    }
+    // 初始化 - new 操作符
+    let constructor = target.constructor;
+
+    copy = new constructor();
+
+    //  防止循环
+    if (map.get(target)) {
+        return target;
+    }
+    map.set(target, copy);
+
+    // set
+    if (type === '[object Set]') {
+        target.forEach(it => {
+            copy.add(deepCopy(it, map));
+        });
+        return copy;
+    }
+
+    // map
+    if (type === '[object Map]') {
+        target.forEach((value, key) => {
+            copy.set(key, deepCopy(value, map));
+        });
+        return copy;
+    }
+
+    if (Array.isArray(target)) {
+        for (let i = 0; i < target.length; i++) {
+            copy[i] = deepCopy(target[i], map);
+        }
+    } else {
+        for (let i in target) {
+            if (target.hasOwnProperty(i)) {
+                copy[i] = deepCopy(target[i], map);
+            }
+        }
+    }
+    return copy;
+}
+let a = () => {console.log(111)};
+console.log(typeof a, deepCopy(a));
+```
+
+
+
+3. 【简单版本】**递归**：递归方法实现深度克隆原理：遍历对象、数组直到里边都是基本数据类型，然后再去复制，就是深度拷贝。
 
 ```javascript
 // 利用 for 循环可以简单实现为
