--- a/_posts/JS原生基础相关/2021-07-21-柯里化函数实现.md
+++ b/_posts/JS原生基础相关/2021-07-21-柯里化函数实现.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      柯里化函数实现(两种：递归调用/单次调用)
+title:      柯里化函数实现
 subtitle:  
 date:       2021-07-21
 author:     
@@ -12,9 +12,20 @@ tags:
 typora-root-url: ..
 ---
 
-## 柯里化函数实现(两种：递归调用/单次调用)
+## 柯里化函数实现
 
 柯里化是把 **接受 <u>多个参数</u> 的函数** 变换成 **接受一个 <u>单一参数</u> 的函数**，并且返回 **接受余下的参数而且返回结果的新函数** 的技术。
+
+```js
+// 更简洁、更现代化的方式
+function curry(fun, ...args) {
+    if(args.length >= fun.length) {
+        return fun(...args)
+    } else {
+        return (...args2) => curry(fun, ...args, ...args2)
+    }
+}
+```
 
 #### 一、柯里化函数实现
 
@@ -29,7 +40,7 @@ let res = processMultiple(2)(3)(4); //24
 let processMultiple1 = processCurry(multiple, 3);
 let res1 = processMultiple1(4)(5); // 60
 
-var processCurry = function(fn, args = []) {
+var processCurry = function(fn) {
     const args = [...arguments].slice(1);
     const length = fn.length;
 
@@ -38,7 +49,7 @@ var processCurry = function(fn, args = []) {
         if (length - newArgs.length < 1) {
             return fn.apply(this, newArgs);
         } else {
-            return processCur.call(this, fn, ...newArgs);
+            return processCurry.call(this, fn, ...newArgs);
         }
     }
 }
