刷题：观察者模式 + 数组乱序

--- a/_posts/JS原生基础相关/2019-07-11-深拷贝和浅拷贝的区别？怎么实现深拷贝？.md
+++ b/_posts/JS原生基础相关/2019-07-11-深拷贝和浅拷贝的区别？怎么实现深拷贝？.md
@@ -62,7 +62,10 @@ console.log(arr); // [1, 3, {username: 'aQiu'}] 不变
 
 2. 【完整版本】**递归**：除了数组、对象，还要考虑 Date、正则RegExp、函数，以及对象的循环引用（简单的递归会导致栈溢出）问题处理
 
-- 注意：① weakMap ② symbol不能使用 new，创建新的用`Symbol.for(target.description)`
+- 注意：
+    - ① weakMap 存储的值是对象 - 赋值地址后， `res` 变化-map 中存储的值也变化了
+    - ② symbol不能使用 new，创建新的用`Symbol.for(target.description)` 
+    - ③ for…in 循环的是 object 的 key 
 
 ```js
 // 更周全的深拷贝
@@ -143,7 +146,13 @@ function deepCopy(target, map = new WeakMap()) {
     }
     return copy;
 }
-let a = () => {console.log(111)};
+// 循环引用
+let obj1 = { name: 'Object 1' };
+let obj2 = { name: 'Object 2' };
+let array = [obj1, obj2];
+obj1.reference = array;
+
+let a = obj1;
 console.log(typeof a, deepCopy(a));
 ```
 
