LTN：11.22 11个LTN1 -> 升级级为 LTN2；4个LTN2 降级为 LTN1；5个LTN2升级为LTN3

--- a/_posts/HTTP相关/2021-04-29-25 HTTP2 特性.md
+++ b/_posts/HTTP相关/2021-04-29-25 HTTP2 特性.md
@@ -25,13 +25,13 @@ typora-root-url: ..
 
     2、不再使用纯文本报文，全面采用 **<span style="color:red">二进制帧</span>**
 
-    3、使用 **虚拟的流（二进制帧的双向传输序列）** 传输消息，同时实现了 **<span style="color:red">多路复用</span>** - 多个往返通信都复**用一个连接来处理**，（『多个请求/响应之间没有了顺序关系』）解决了困扰多年的 **队头阻塞** 问题
+    3、使用『 <u>**虚拟的流（二进制帧的双向传输序列）**</u> 』传输消息，同时实现了 **<span style="color:red">多路复用</span>** - 多个往返通信都复**用一个连接来处理**，（多个请求/响应之间没有了顺序关系）解决了困扰多年的 **队头阻塞** 问题
 
     - 在应用层解决，但是传输层 TCP 协议中仍旧存在队头阻塞
 
     4、**<span style="color:red">服务器推送</span>**
 
-    5、『设置请求的优先级』
+    5、『<u>设置请求的优先级</u>』
     
     6、也增强了安全性，使用 HTTPS
 
