--- a/_posts/HTTP相关/2021-05-06-29 WebSocket.md
+++ b/_posts/HTTP相关/2021-05-06-29 WebSocket.md
@@ -17,13 +17,13 @@ typora-root-url: ..
 
 总结：
 
-『HTTP 的 **请求 - 应答** 模式不适合开发 **实时通信** 应用』，效率低，难以实现动态页面，所以出现了 `WebSocket`
+HTTP 的 **请求 - 应答** 模式不适合开发 **实时通信** 应用，效率低，难以实现动态页面，所以出现了 `WebSocket`
 
-- 1、定义：`WebSocket` 是一个『 **全双工 - 双向通信** 』的通信协议，『实现浏览器和服务端 **实时通信** - 没有同源限制』
+- 1、定义：`WebSocket` 是一个**全双工 - 双向通信**的通信协议，实现浏览器和服务端 **实时通信** - 『<u>没有同源限制</u>』
 
-- 2、`WebSocket` 采用了 **二进制帧结构**，和 HTTP对比：
+- 2、`WebSocket` 『<u>采用了 **二进制帧结构**</u> 』，和 HTTP对比：
     - ①语法、语义与 HTTP 完全不兼容
-    - ②『发现服务』：没有使用 HTTP 的 IP:端口号，而是『使用 **URI 格式** (HTTP也兼容)』
+    - ②发现服务：没有使用 HTTP 的 IP:端口号，而是使用 **URI 格式** (HTTP也兼容)
     - ③新的协议名： `ws:80`和 `wss:443`
 
 - 3、连接实现：`WebSocket` 利用 HTTP 协议实现连接握手 -『 **发送 GET 请求要求协议升级**』，目的是防止误连接 - **握手阶段** 采用 HTTP 协议，因此握手时不容易屏蔽，能通过各种 HTTP 代理服务器
