--- a/_posts/HTTP相关/2021-05-07-XSS跨域脚本攻击 和 CSRF跨站请求伪造攻击.md
+++ b/_posts/HTTP相关/2021-05-07-XSS跨域脚本攻击 和 CSRF跨站请求伪造攻击.md
@@ -15,7 +15,7 @@ typora-root-url: ..
 
 # XSS跨域脚本攻击 和 CSRF跨站请求伪造攻击
 
-<img src="/../img/assets_2023/image-20241110161354789.png" alt="image-20241110161354789" style="zoom:27%;" />
+![image-20241119202627052](/../img/assets_2023/image-20241110161354789.png)
 
 - 总结
 
