--- a/_posts/JS原生基础相关/2020-03-24-改变原数组+结束循环+性能排序.md
+++ b/_posts/JS原生基础相关/2020-03-24-改变原数组+结束循环+性能排序.md
@@ -23,7 +23,7 @@ typora-root-url: ..
 
 - 会改变原数组的方法(8种)：`push`,`pop`,`shift`,`unshift`,`reverse`,`sort`,`splice`,`fill`
 
--	除了抛出异常外，**不能通过 break 和 『<u>return</u>』 结束循环**：`foreach`、`map`、`filter`【for…of和for循环可以】
+-	除了抛出异常外，**不能通过 break 和 『<u>return</u>』 结束循环**：`forEach`、`map`、`filter`、`reduce`【for…of和for循环可以】
 
 -	满足场景的方法：`some`、`find`、`for…of`、`for循环`可以找到第一个返回true/值/使用return之后停止
 
