LTN：11.25 6个LTN3/LTN2 -> 降级为 LTN1

--- a/_posts/css相关内容/2021-06-27-CSS 选择器 - 权重匹配方式.md
+++ b/_posts/css相关内容/2021-06-27-CSS 选择器 - 权重匹配方式.md
@@ -9,14 +9,12 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 
 # CSS 选择器 - 权重/匹配方式
-
-![image-20241103153931418](/../img/assets_2023/image-20241103153931418.png)
 
 #### 一、权重
 
@@ -24,7 +22,7 @@ typora-root-url: ..
 
 注意：
 
-- !important > 行内样式 > 内联/外联样式
+- 『!important > 行内样式 > 内联/外联样式』
 
 -	当两个样式都使用 `!important` 时，权重值大的优先级更高
 -	css 样式是单线程，**内联/外联样式** 的优先级只和 **加载顺序** 有关
