博客整理：侧重于整理散落的面试题目记录

--- a/_posts/工程化/2020-03-17-模块化.md
+++ b/_posts/工程化/2020-03-17-模块化.md
@@ -22,13 +22,34 @@ typora-root-url: ..
 
 1、`CommonJS` 规范主要用于② **服务端编程**；①**加载模块是<span style="color:red">同步</span>的**，不适合在浏览器环境，存在 <u>阻塞加载</u>；③输出一个值的拷贝；④运行时加载；
 
+```js
+require + modules.exports
+```
+
 浏览器资源是异步加载的，因此有了AMD、CMD解决方案。
 
 2、`AMD/RequireJS` 规范在浏览器环境中 ① **<span style="color:red">异步</span>加载模块；**而且可以②**<span style="color:red">并行</span>**加载多个模块；③依赖前置，④加载模块后直接执行，无法保证执行顺序
 
+```js
+define(['./a.js', './b.js'], function(a, b){a.callback();b.callback()})
+```
+
 3、`CMD/SeaJS` 规范与AMD规范很相似，都用于浏览器编程，①异步；②**<span style="color:red">依赖就近</span>**，③加载后直到调用才按需执行
 
+```js
+define(function(require, exports, module){
+    let a = require('./a.js');
+    a.callback();
+})
+```
+
 4、`ES6` 在语言标准的层面上，实现了模块功能，而且实现得相当简单，完全可以取代 CommonJS 和 AMD 规范，成为浏览器和服务器 **通用的模块解决方案** - ①异步，②输出的是值的引用，③编译时输出（静态解析时生成）
+
+```js
+import + as + export + from + default
+```
+
+
 
 ****
 
