--- a/_posts/工程化/2021-07-20-常见Webpack问题.md
+++ b/_posts/工程化/2021-07-20-常见Webpack问题.md
@@ -35,7 +35,8 @@ typora-root-url: ..
 
     - 开发插件的桥梁？
 
-    
+
+![image-20241126125804094](/../img/assets_2023/image-20241126125804094.png)
 
 
 
@@ -76,21 +77,23 @@ module.exports = function(source){
 module.exports = {
     module: {
         rules: [
-            test: /\.js/,
-            use: [
-            	path.resolve(_dirname, './loaders/replaceLoader.js')
-        	]]}}
+            {
+                test: /\.js/,
+                use: [path.resolve(_dirname, './loaders/replaceLoader.js')]
+            }
+        ]}}
 // 配置方法二：利用 resolveLoader 定义位置
 module.exports = {
-    resolveLoader: ['node_modules', './loaders'], // 引入loader时，逐一在文件夹中查找
+    resolveLoader: ['node_modules', path.resolve(_dirname, './loaders')], // 引入loader时，逐一在文件夹中查找
     module: {
         rules: [
-            test: /\.js/,
-            use: [
             {
-            	loader: 'replaceLoader'
-            }
-        ]]}}
+                test: /\.js/,
+                use: [
+                    {
+                        loader: 'replaceLoader'
+                    }
+                ]}}
 ```
 
 
@@ -133,17 +136,18 @@ module.exports = {
 
 - 开启方法：
 
-    ```json
+    ```js
     "script": {
         // 方法一：开启监听
         "watch": "weppack --watch",
+    
         // 方法二：安装模块，直接执行模块
         "start": "webpack-dev-server",
     }
     ```
-
+    
     方法二安装模块后，可以配置开启热更新、**跨域**等
-
+    
     <img src="/../img/assets_2023/image-20241114123328539.png" alt="image-20241114123328539" style="zoom:10%;" />
 
 #### 七、webpack原理
