--- a/_posts/面试题整理/2024-04-23-面试题目复盘面试题目复盘（技术内容）.md
+++ b/_posts/面试题整理/2024-04-23-面试题目复盘面试题目复盘（技术内容）.md
@@ -53,3 +53,13 @@ typora-root-url: ..
 
 - 在动画开始时就提前调用
 - BFF部署在有扩容能力的服务器上
+
+1、【todo】[实现 mergePromise](https://github.com/CodingWithAlice/init-my/blob/master/src/assets/%E6%89%8B%E6%92%95/mergePromise.html)
+
+16、【todo】[输出一个二叉树的左视图](https://github.com/CodingWithAlice/init-my/blob/master/src/assets/%E7%AE%97%E6%B3%95/%E8%BE%93%E5%87%BA%E4%BA%8C%E5%8F%89%E6%A0%91%E5%B7%A6%E8%A7%86%E5%9B%BE.html) （溯源算法 或者 层序遍历）
+
+17、【todo】[数组去重](https://github.com/CodingWithAlice/init-my/blob/master/src/assets/%E6%89%8B%E6%92%95/%E6%95%B0%E7%BB%84%E5%8E%BB%E9%87%8D.html)（写三种）
+
+18、【todo】[事件系统](https://github.com/CodingWithAlice/init-my/blob/master/src/assets/%E4%BA%8B%E4%BB%B6%E7%B3%BB%E7%BB%9F.html)
+
+19、【todo】[洋葱模型](https://github.com/CodingWithAlice/init-my/blob/master/src/assets/%E6%89%8B%E6%92%95/%E6%B4%8B%E8%91%B1%E6%A8%A1%E5%9E%8B.html)
