--- a/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
+++ b/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
@@ -31,7 +31,7 @@ typora-root-url: ..
 
 > 前两种分别是给父盒子添加高度/触发BFC重新排列，后两种都是在父级的末尾添加一个去除浮动的元素
 
-1. 给 **父盒子** 设置合适的**高度、border、padding**；
+1. 给 **父盒子** 设置合适的**高度、『border』、padding**；（margin不行 - margin控制的是元素外部的间距）
 
 2. 【推荐BFC】：给**父盒子添加样式  `overflow:hidden;（不为visible即可）`**
 
@@ -49,7 +49,7 @@ typora-root-url: ..
 /* 最简写法 */
 .father::after {
     content:"";
-    display: inline-block; /* 『拥有独立的盒模型 - 块元素单独一行，可能 clear:both 失效』 */
+    display: block; /* 『拥有独立的盒模型 - 块元素单独一行，可能 clear:both 失效』 */
     clear:both; /* 表示块级元素的左右两边都不能有浮动元素 */
 }
 ```
