LTN：12.2 8个LTN1升到2

--- a/_posts/工程化/2021-07-20-常见Webpack问题.md
+++ b/_posts/工程化/2021-07-20-常见Webpack问题.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < webpack >
-    - < LTN1 >
+    - < LTN2 >
 typora-root-url: ..
 
 ---
@@ -36,7 +36,7 @@ typora-root-url: ..
     - 开发插件的桥梁？
 
 
-![image-20241126125804094](/../img/assets_2023/image-20241126125804094.png)
+![image-20241203105221763](/../img/assets_2023/CNAME.png)
 
 
 
