LTN：12.2 8个LTN3升到4

--- a/_posts/JS原生基础相关/2019-07-11-for循环+计时器，如何实现i按序输出.md
+++ b/_posts/JS原生基础相关/2019-07-11-for循环+计时器，如何实现i按序输出.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < JS原生基础相关 >
-    - < LTN3 >
+    - < LTN4 >
 typora-root-url: ..
 ---
 
@@ -46,9 +46,7 @@ for (var i = 0; i < 10; i++) {
 
 ```javascript
 for(let i=0;i<10;i++){
-    setTimeout(function ten(){
-        console.log(i);
-    },10);
+    setTimeout(() => console.log(i),10);
 }
 ```
 
@@ -56,9 +54,11 @@ for(let i=0;i<10;i++){
 
 ```javascript
 for (var i = 0; i < 10; i++) {
-    setTimeout(function ten() {
-        console.log(i);
-    }, 10, i);
+    setTimeout((a) => console.log(a), 10, i);
+}
+// 或
+for (var i = 0; i < 10; i++) {
+    setTimeout(console.log, 10, i);
 }
 // 或
 for (var i = 0; i < 10; i++) {
