--- a/_posts/算法、刷题/2019-06-18-函数参数传值修改.md
+++ b/_posts/算法、刷题/2019-06-18-函数参数传值修改.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < 算法题 >
-    - < LTN3 >
+    - < LTN4 >
 typora-root-url: ..
 ---
 
@@ -30,9 +30,10 @@ objTemp = { b: 2 }; // objTemp指向了另一个地址的对象
 
 浏览器输出结果：
 
-![image-20210810145410092](../img/assets_2019/image-20210810145410092.png)
-
-
+```
+arr = [1,2,3];
+obj = {a: 1};
+```
 
 ##### 二、补充案例
 
