LTN：12.2 2个LTN3降到1

--- a/_posts/工程化/2020-03-17-模块化.md
+++ b/_posts/工程化/2020-03-17-模块化.md
@@ -28,7 +28,7 @@ require + modules.exports
 
 浏览器资源是异步加载的，因此有了AMD、CMD解决方案。
 
-2、`AMD/RequireJS` 规范在浏览器环境中 ① **<span style="color:red">异步</span>加载模块；**而且可以②**<span style="color:red">并行</span>**加载多个模块；③依赖前置，④加载模块后直接执行，无法保证执行顺序
+2、`AMD/RequireJS` 规范在浏览器环境中 ① **<span style="color:red">异步</span>加载模块；**而且可以『<u>②**<span style="color:red">并行</span>**加载多个模块</u>』③依赖前置，④加载模块后直接执行，无法保证执行顺序
 
 ```js
 define(['./a.js', './b.js'], function(a, b){a.callback();b.callback()})
