刷题：观察者模式+洗牌+排平数组 -> LTN1

--- a/_posts/算法、刷题/2021-07-07-数组扁平化（一层、全部展开、指定深度）.md
+++ b/_posts/算法、刷题/2021-07-07-数组扁平化（一层、全部展开、指定深度）.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      数组扁平化（拍平数组）
+title:      数组扁平化（一层、全部展开、指定深度）
 subtitle:  
 date:       2021-07-07
 author:     
@@ -8,10 +8,11 @@ header-img:
 catalog: true
 tags:
     - < 算法题 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
-## 数组扁平化（拍平数组）
+## 数组扁平化（一层、全部展开、指定深度）
 
 参考文章：[数组拍平连环问](https://segmentfault.com/a/1190000021366004) - 只研究到第二问 reduce，没有再深入，一共七问
 
@@ -19,7 +20,51 @@ typora-root-url: ..
 
 如何实现 `flat` 方法？多维数组=>一维数组
 
-#### 解答：
+方法总结：
+
+-	展开一层：1、`[].concat(...arr)` 2、`[].concat.apply([], arr)`
+
+- 全部展开：1、falt本身：`arr.flat(Infinity)`
+
+    2、toString 将数组全部打平：`arr.toString().split(',')`
+
+    3、递归：① concat的参数为数组/值：
+
+    ```js
+    function flatFun(arr){
+        return arr.reduce((pre, cur) => pre.concat(Array.isArray(cur) ? flatFun(cur) : cur))
+    }
+    ```
+
+    ②遍历forEach组装res
+
+    ```js
+    function flatFun(arr) {
+        let res = [];
+        arr.forEach(item => {
+            res = res.concat(Array.isArray(item) ? flatFun(item) : item)
+        });
+        return res;
+    }
+    ```
+
+- 根据指定深度扁平数组
+
+    ```js
+    function flattenByDeep(arr, deep = 1) {
+        return arr.reduce((pre, cur) =>
+                          pre.concat(Array.isArray(cur) && deep > 1 ? flattenByDeep(cur, deep - 1) : cur)
+                          , [])
+    }
+    ```
+
+    
+
+
+
+
+
+#### 详细解答：
 
 - 方法一： 直接调用 `Array` 的 `flat` 方法 - `arr = arrays.flat(Infinity);`
 
@@ -146,30 +191,55 @@ typora-root-url: ..
             let res = [];
             arr.forEach(item => {
                 if (Array.isArray(item)) {
-                    // 递归写法一：
-                    res = res.concat(arguments.callee(item));
-                    // 递归写法二：
-                    // res = res.concat(flatFun(item));
+                    res = res.concat(flatFun(item));
                 } else {
                     res.push(item);
                 }
+                // 上面的 if 逻辑可以利用concat特性，简写成
+                // res = res.concat(Array.isArray(item) ? flatFun(item) : item)
             });
             return res;
         }
+        // 另一种写法 - 每次非数组都要执行一次递归，消耗大，不采用
+        function flatFun2(target) {
+            if (!Array.isArray(target)) {
+                return [target]; // 同时在这边返回长度为1的数组类型
+            }
+            let res = [];
+            target.forEach(it => res.push(...flatFun2(it))); // 这边注意一定要加 ... 因为返回的res都是数组
+            return res;
+        }
         ```
-
+        
         第5⃣️种：`reduce`
         
         ```js
         var flatFun = (arrays) => {
             return arrays.reduce((pre, cur) => {
         		// 写法一：        
-                // return pre.concat(Array.isArray(cur) ? flatFun(cur) : cur);
+                return pre.concat(Array.isArray(cur) ? flatFun(cur) : cur);
                 // 写法二：
-                return (Array.isArray(cur) ? pre.concat(flatFun(cur)) : pre.concat(cur));
+                // return (Array.isArray(cur) ? pre.concat(flatFun(cur)) : pre.concat(cur));
             },[])
         }
         ```
         
-        
 
+- 补充情况：根据指定深度扁平数组
+
+    - 第⑥种
+
+        ```js
+        function flattenByDeep(arr, deep = 1) {
+            return arr.reduce((pre, cur) =>
+                              Array.isArray(cur) && deep > 1 ?
+                              pre.concat(flattenByDeep(cur, deep - 1)) :
+                              pre.concat(cur)
+                              // 可以简写成 
+                              // pre.concat(Array.isArray(cur) && deep > 1 ? flattenByDeep(cur, deep - 1) : cur)
+                              , []
+                             )
+        }
+        ```
+
+        
