--- a/_posts/算法、刷题/2024-11-15-数组乱序 洗牌算法.md
+++ b/_posts/算法、刷题/2024-11-15-数组乱序 洗牌算法.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < 算法题 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -31,7 +32,18 @@ let test = disorder([1,2,3,4,5,6,7]);
 console.log('test=', test);
 ```
 
+自己写了一个 for循环的
 
+```js
+function disorder1(cards) {
+    let length = cards.length;
+    for (let i = length - 1; i >= 0; i--) {
+        let randomIndex = parseInt(Math.random()*length);
+        [cards[i], cards[randomIndex]] = [cards[randomIndex], cards[i]];
+    }
+    return cards
+}
+```
 
 
 
