刷题：数组去重+实现promise -> LTN1

--- a/_posts/工作经验沉淀：Vue 相关/2019-08-01-常见报错解决.md
+++ b/_posts/工作经验沉淀：Vue 相关/2019-08-01-常见报错解决.md
@@ -60,7 +60,7 @@ typora-root-url: ..
 
 在报400错误的时候，同时发现传递的值和接口所需的值的类型是一一对应的，这个时候要确认，我遇到的问题就是**接口所需的URL是有传递的id和类型**的，但是我定义`api`的时候用的`formData`，还试了`json`格式的`params:params` ，这个时候要在定义`api`的时候写上URL的跳转方式：
 
-![1566114641130](/img/assets_2019/1566114641130.png)
+![1566114641130](../img/assets_2019/1566114641130.png)
 
 ```javascript
 // 修改 
