--- a/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
+++ b/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
@@ -8,10 +8,32 @@ header-img:
 catalog: true
 tags:
     - < 算法题 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 # 数组去重（算法整理）
+
+总结：
+
+1、最简单的，利用 Set：`[...new Set(arr)]`/`Array.from(new Set(arr))`
+
+2、新建一个对象存储是否出现过：
+
+```js
+function unique(arr) {
+    let hash = {};
+    return arr.filter((it) => hash[it] ? false : hash[it] = true)
+} // hash[it] = true 传递给返回值的值为 true
+```
+
+3、下标判断 filter+indexOf
+
+```js
+const unique = arr => arr.filter((e,i) => arr.indexOf(e) === i);
+```
+
+
 
 
 
@@ -32,6 +54,11 @@ function unique(arr) {
         }
     }
     return result;
+}
+// 可以简写为
+function unique(arr) {
+    let hash = {};
+    return arr.filter((it) => hash[it] ? false : hash[it] = true)
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
@@ -56,6 +83,18 @@ unique(arr);//[1, 23, 34, 45, 6, 4]
 ```
 
 思路2 - `includes`：新建一个数组`result`，如果新数组中该值`i`不存在，则将原数组内容添加`push(i)`。
+
+```js
+function unique2(arr) {
+    let res = [];
+    arr.forEach(i => {
+        if (!res.includes(i)) {
+            res.push(i)
+        }
+    });
+    return res;
+}
+```
 
 **for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）**；
 
